<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/tasksText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/tasks"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/buttonsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tasksText"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/allTasksBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/all_tasks"
            android:textColor="@color/colorPrimary"
            app:cornerRadius="@dimen/btn_radius" />

        <Button
            android:id="@+id/completedTasksBtn"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/completed_tasks"
            app:cornerRadius="@dimen/btn_radius"/>

        <Button
            android:id="@+id/uncompletedTasksBtn"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uncompleted_tasks"
            app:cornerRadius="@dimen/btn_radius"/>
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasksRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonsContainer"
        android:layout_marginTop="15dp"
        android:nestedScrollingEnabled="true"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="32dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:src="@drawable/baseline_add_24" />

</RelativeLayout>